--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -66,7 +66,7 @@ jobs:
   pool:
     vmImage: 'ubuntu-16.04'
   steps:
-  - template: azp-template-addon.yml
+  - template: .azure/azp-template-addon.yml
     parameters:
       addon: 'cec_scan'
       arch: '--all'
@@ -81,7 +81,7 @@ jobs:
   pool:
     vmImage: 'ubuntu-16.04'
   steps:
-  - template: azp-template-addon.yml
+  - template: .azure/azp-template-addon.yml
     parameters:
       addon: 'check_config'
       arch: '--all'
@@ -96,7 +96,7 @@ jobs:
   pool:
     vmImage: 'ubuntu-16.04'
   steps:
-  - template: azp-template-addon.yml
+  - template: .azure/azp-template-addon.yml
     parameters:
       addon: 'configurator'
       arch: '--all'
@@ -111,7 +111,7 @@ jobs:
   pool:
     vmImage: 'ubuntu-16.04'
   steps:
-  - template: azp-template-addon.yml
+  - template: .azure/azp-template-addon.yml
     parameters:
       addon: 'deconz'
       arch: '--amd64 --armhf'
@@ -126,7 +126,7 @@ jobs:
   pool:
     vmImage: 'ubuntu-16.04'
   steps:
-  - template: azp-template-addon.yml
+  - template: .azure/azp-template-addon.yml
     parameters:
       addon: 'dhcp_server'
       arch: '--all'
@@ -141,7 +141,7 @@ jobs:
   pool:
     vmImage: 'ubuntu-16.04'
   steps:
-  - template: azp-template-addon.yml
+  - template: .azure/azp-template-addon.yml
     parameters:
       addon: 'dnsmasq'
       arch: '--all'
@@ -156,7 +156,7 @@ jobs:
   pool:
     vmImage: 'ubuntu-16.04'
   steps:
-  - template: azp-template-addon.yml
+  - template: .azure/azp-template-addon.yml
     parameters:
       addon: 'duckdns'
       arch: '--all'
@@ -171,7 +171,7 @@ jobs:
   pool:
     vmImage: 'ubuntu-16.04'
   steps:
-  - template: azp-template-addon.yml
+  - template: .azure/azp-template-addon.yml
     parameters:
       addon: 'git_pull'
       arch: '--all'
@@ -186,7 +186,7 @@ jobs:
   pool:
     vmImage: 'ubuntu-16.04'
   steps:
-  - template: azp-template-addon.yml
+  - template: .azure/azp-template-addon.yml
     parameters:
       addon: 'google_assistant'
       arch: '--amd64 --armv7'
@@ -201,7 +201,7 @@ jobs:
   pool:
     vmImage: 'ubuntu-16.04'
   steps:
-  - template: azp-template-addon.yml
+  - template: .azure/azp-template-addon.yml
     parameters:
       addon: 'homematic'
       arch: '--i386 --armv7'
@@ -216,7 +216,7 @@ jobs:
   pool:
     vmImage: 'ubuntu-16.04'
   steps:
-  - template: azp-template-addon.yml
+  - template: .azure/azp-template-addon.yml
     parameters:
       addon: 'letsencrypt'
       arch: '--all'
@@ -231,7 +231,7 @@ jobs:
   pool:
     vmImage: 'ubuntu-16.04'
   steps:
-  - template: azp-template-addon.yml
+  - template: .azure/azp-template-addon.yml
     parameters:
       addon: 'mariadb'
       arch: '--all'
@@ -246,7 +246,7 @@ jobs:
   pool:
     vmImage: 'ubuntu-16.04'
   steps:
-  - template: azp-template-addon.yml
+  - template: .azure/azp-template-addon.yml
     parameters:
       addon: 'mosquitto'
       arch: '--all'
@@ -261,7 +261,7 @@ jobs:
   pool:
     vmImage: 'ubuntu-16.04'
   steps:
-  - template: azp-template-addon.yml
+  - template: .azure/azp-template-addon.yml
     parameters:
       addon: 'nginx_proxy'
       arch: '--all'
@@ -276,7 +276,7 @@ jobs:
   pool:
     vmImage: 'ubuntu-16.04'
   steps:
-  - template: azp-template-addon.yml
+  - template: .azure/azp-template-addon.yml
     parameters:
       addon: 'rpc_shutdown'
       arch: '--all'
@@ -291,7 +291,7 @@ jobs:
   pool:
     vmImage: 'ubuntu-16.04'
   steps:
-  - template: azp-template-addon.yml
+  - template: .azure/azp-template-addon.yml
     parameters:
       addon: 'samba'
       arch: '--all'
@@ -306,7 +306,7 @@ jobs:
   pool:
     vmImage: 'ubuntu-16.04'
   steps:
-  - template: azp-template-addon.yml
+  - template: .azure/azp-template-addon.yml
     parameters:
       addon: 'snips'
       arch: '--amd64 --armhf'
@@ -321,7 +321,7 @@ jobs:
   pool:
     vmImage: 'ubuntu-16.04'
   steps:
-  - template: azp-template-addon.yml
+  - template: .azure/azp-template-addon.yml
     parameters:
       addon: 'ssh'
       arch: '--all'
@@ -336,7 +336,7 @@ jobs:
   pool:
     vmImage: 'ubuntu-16.04'
   steps:
-  - template: azp-template-addon.yml
+  - template: .azure/azp-template-addon.yml
     parameters:
       addon: 'tellstick'
       arch: '--all'
