--- a/check_config/config.json
+++ b/check_config/config.json
@@ -3,11 +3,20 @@
   "version": "1.0",
   "slug": "check_config",
   "description": "Check current Home Assistant configuration against a new version",
-  "url": "https://home-assistant.io/addons/check_config/",
-  "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
+  "url": "https://github.com/home-assistant/hassio-addons/tree/master/check_config",
+  "arch": [
+    "armhf",
+    "armv7",
+    "aarch64",
+    "amd64",
+    "i386"
+  ],
   "startup": "once",
   "boot": "manual",
-  "map": ["config", "ssl"],
+  "map": [
+    "config",
+    "ssl"
+  ],
   "options": {
     "version": "latest"
   },
