--- a/cec_scan/config.json
+++ b/cec_scan/config.json
@@ -1,10 +1,16 @@
 {
   "name": "CEC Scanner",
-  "version": "2",
+  "version": "2.1",
   "slug": "cec_scan",
-  "description": "Scan HDMI CEC devices",
-  "url": "https://home-assistant.io/addons/cec_scan/",
-  "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
+  "description": "Scan for HDMI CEC devices",
+  "url": "https://github.com/home-assistant/hassio-addons/tree/master/cec_scan",
+  "arch": [
+    "armhf",
+    "armv7",
+    "aarch64",
+    "amd64",
+    "i386"
+  ],
   "startup": "once",
   "boot": "manual",
   "devices": [
