cec_scan: Set shell to bash

--- a/cec_scan/Dockerfile
+++ b/cec_scan/Dockerfile
@@ -5,12 +5,12 @@ WORKDIR /usr/src
 ARG BUILD_ARCH
 
 # Set shell
-SHELL ["/bin/ash", "-o", "pipefail", "-c"]
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
 # Build libcec for HDMI-CEC
 ARG LIBCEC_VERSION
 RUN \
-    if [[ "armhf armv7 aarch64" == *"$BUILD_ARCH"* ]]; then \
+    if [[ "armhf armv7 aarch64" = *"$BUILD_ARCH"* ]]; then \
         apk add --no-cache raspberrypi-dev raspberrypi-libs; \
     fi \
     && apk add --no-cache \
@@ -27,7 +27,7 @@ RUN \
         "https://github.com/Pulse-Eight/libcec" /usr/src/libcec \
     && mkdir -p /usr/src/libcec/build \
     && cd /usr/src/libcec/build \
-    && if [[ "armhf armv7 aarch64" == *"$BUILD_ARCH"* ]]; then \
+    && if [[ "armhf armv7 aarch64" = *"$BUILD_ARCH"* ]]; then \
             cmake -DCMAKE_INSTALL_PREFIX:PATH=/usr/local ..; \
         else \
             cmake \
@@ -38,7 +38,7 @@ RUN \
     && make -j$(nproc) \
     && make install \
     && apk del --no-cache .build-dependencies \
-    && if [[ "armhf armv7 aarch64" == *"$BUILD_ARCH"* ]]; then \
+    && if [[ "armhf armv7 aarch64" = *"$BUILD_ARCH"* ]]; then \
         apk del --no-cache raspberrypi-dev; \
     fi
 
