deconz: Fixes add-on URL
Fixes #583

--- a/deconz/config.json
+++ b/deconz/config.json
@@ -4,7 +4,7 @@
   "slug": "deconz",
   "description": "Control a ZigBee network with Conbee or RaspBee by Dresden Elektronik",
   "arch": ["amd64", "armhf"],
-  "url": "https://home-assistant.io/addons/deconz",
+  "url": "https://github.com/home-assistant/hassio-addons/tree/master/deconz",
   "startup": "system",
   "boot": "auto",
   "homeassistant": "0.91.2",
