Refactor of check_config add-on (#586)
* check_config: Rewrite onto Bashio

* check_config: Removed extra slash from Dockerfile

* check_config: Added README file

* check_config: Formatted config.json, changed link

* check_config: Bumped version, updated changelog

* Update Dockerfile

* Update run.sh

* Update CHANGELOG.md

* check_config: Added Known issues and limitations section to README

* check_config: Bumped version to 2.0

* check_config: Bumped version in CHANGELOG

* check_config: Remove typo in option name in README

--- a/check_config/Dockerfile
+++ b/check_config/Dockerfile
@@ -1,13 +1,9 @@
 ARG BUILD_FROM
 FROM $BUILD_FROM
 
-# Setup base
-RUN apk add --no-cache \
-        jq \
-        gcc \
-        libffi-dev \
-        openssl-dev \
-        musl-dev \
+# Add Hass.io wheels repository
+ARG BUILD_ARCH
+ENV WHEELS_LINKS=https://wheels.home-assistant.io/alpine-3.9/${BUILD_ARCH}/
 
 # Copy data
 COPY run.sh /
