--- a/tellstick/config.json
+++ b/tellstick/config.json
@@ -2,8 +2,8 @@
   "name": "TellStick",
   "version": "1.0",
   "slug": "tellstick",
-  "description": "TellStick and TellStick Duo service.",
-  "url": "https://home-assistant.io/addons/tellstick/",
+  "description": "TellStick and TellStick Duo service",
+  "url": "https://github.com/home-assistant/hassio-addons/tree/master/tellstick",
   "arch": [
     "armhf",
     "armv7",
