--- a/dnsmasq/config.json
+++ b/dnsmasq/config.json
@@ -1,10 +1,16 @@
 {
   "name": "Dnsmasq",
-  "version": "1.2",
+  "version": "1.3",
   "slug": "dnsmasq",
   "description": "A simple DNS server",
   "url": "https://home-assistant.io/addons/dnsmasq/",
-  "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
+  "arch": [
+    "armhf",
+    "armv7",
+    "aarch64",
+    "amd64",
+    "i386"
+  ],
   "startup": "system",
   "boot": "auto",
   "ports": {
@@ -12,12 +18,17 @@
     "53/udp": 53
   },
   "options": {
-    "defaults": ["8.8.8.8", "8.8.4.4"],
+    "defaults": [
+      "8.8.8.8",
+      "8.8.4.4"
+    ],
     "forwards": [],
     "hosts": []
   },
   "schema": {
-    "defaults": ["str"],
+    "defaults": [
+      "str"
+    ],
     "forwards": [
       {
         "domain": "str",
