--- a/tellstick/config.json
+++ b/tellstick/config.json
@@ -1,32 +1,40 @@
 {
   "name": "TellStick",
-  "version": "1.0",
+  "version": "2.0",
   "slug": "tellstick",
-  "description": "TellStick and TellStick Duo service.",
-  "url": "https://home-assistant.io/addons/tellstick/",
-  "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
+  "description": "TellStick and TellStick Duo service",
+  "url": "https://github.com/home-assistant/hassio-addons/tree/master/tellstick",
+  "arch": [
+    "armhf",
+    "armv7",
+    "aarch64",
+    "amd64",
+    "i386"
+  ],
   "startup": "system",
   "stdin": true,
   "boot": "auto",
-  "devices": ["/dev/bus/usb:/dev/bus/usb:rwm"],
+  "devices": [
+    "/dev/bus/usb:/dev/bus/usb:rwm"
+  ],
   "options": {
     "devices": [
-     {
-      "id": 1,
-      "name": "Example device",
-      "protocol": "everflourish",
-      "model": "selflearning-switch",
-      "house": "A",
-      "unit": "1"
-     },
-     {
-      "id": 2,
-      "name": "Example device two",
-      "protocol": "everflourish",
-      "model": "selflearning-switch",
-      "house": "A",
-      "unit": "2"
-     }
+      {
+        "id": 1,
+        "name": "Example device",
+        "protocol": "everflourish",
+        "model": "selflearning-switch",
+        "house": "A",
+        "unit": "1"
+      },
+      {
+        "id": 2,
+        "name": "Example device two",
+        "protocol": "everflourish",
+        "model": "selflearning-switch",
+        "house": "A",
+        "unit": "2"
+      }
     ]
   },
   "schema": {
