ssh: Refactor, bumped to 5.5

--- a/ssh/config.json
+++ b/ssh/config.json
@@ -1,10 +1,16 @@
 {
   "name": "SSH server",
-  "version": "5.4",
+  "version": "5.5",
   "slug": "ssh",
   "description": "Allows connections over SSH",
-  "url": "https://home-assistant.io/addons/ssh/",
-  "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
+  "url": "https://github.com/home-assistant/hassio-addons/tree/master/ssh",
+  "arch": [
+    "armhf",
+    "armv7",
+    "aarch64",
+    "amd64",
+    "i386"
+  ],
   "startup": "services",
   "boot": "auto",
   "hassio_api": true,
@@ -12,14 +18,22 @@
   "auto_uart": true,
   "ports": {
     "22/tcp": 22
-   },
-  "map": ["config:rw", "ssl:rw", "addons:rw", "share:rw", "backup:rw"],
+  },
+  "map": [
+    "config:rw",
+    "ssl:rw",
+    "addons:rw",
+    "share:rw",
+    "backup:rw"
+  ],
   "options": {
     "authorized_keys": [],
     "password": ""
   },
   "schema": {
-    "authorized_keys": ["str"],
+    "authorized_keys": [
+      "str"
+    ],
     "password": "str"
   },
   "image": "homeassistant/{arch}-addon-ssh"
