--- a/ssh/Dockerfile
+++ b/ssh/Dockerfile
@@ -6,8 +6,14 @@ ENV LANG C.UTF-8
 
 # Setup base
 RUN apk add --no-cache \
-    openssh vim curl nano git mosquitto-clients tmux \
-    bash-completion
+    bash-completion \
+    curl \
+    git \
+    mosquitto-clients \
+    nano \
+    openssh \
+    tmux \
+    vim
 
 # Replace bash as default shell
 RUN sed -i "s/ash/bash/" /etc/passwd
@@ -15,8 +21,8 @@ RUN sed -i "s/ash/bash/" /etc/passwd
 # Add YAML highlighting for nano
 ADD https://raw.githubusercontent.com/scopatz/nanorc/master/yaml.nanorc /usr/share/nano/yaml.nanorc
 RUN sed -i 's/^#[[:space:]]*\(include "\/usr\/share\/nano\/\*\.nanorc".*\)/\1/' /etc/nanorc
-
 # Hass.io CLI
+
 ARG BUILD_ARCH
 ARG CLI_VERSION
 RUN apk add --no-cache curl \
