--- a/.azure/azp-template-addon.yml
+++ b/.azure/azp-template-addon.yml
@@ -4,7 +4,13 @@ parameters:
   addon: ''
   arch: ''
 
-steps:
+jobs:
+
+- job: '${{ parameters.addon }}'
+  condition: eq(variables['Build.SourceBranchName'], 'master')
+  pool:
+    vmImage: 'ubuntu-16.04'
+  steps:
   - script: sudo docker login -u $(dockerUser) -p $(dockerPassword)
     displayName: 'Docker hub login'
   - script: sudo docker pull homeassistant/amd64-builder:$(versionBuilder)
