--- a/cec_scan/azure-pipelines.yml
+++ b/cec_scan/azure-pipelines.yml
@@ -16,7 +16,7 @@ variables:
 
 
 jobs:
-- template: .azure/azp-template-addon.yml
+- template: /.azure/azp-template-addon.yml
   parameters:
     addon: 'cec_scan'
     arch: '--all'
