--- a/google_assistant/azure-pipelines.yml
+++ b/google_assistant/azure-pipelines.yml
@@ -16,7 +16,7 @@ variables:
 
 
 jobs:
-- template: .azure/azp-template-addon.yml
+- template: /.azure/azp-template-addon.yml
   parameters:
     addon: 'google_assistant'
     arch: '--armv7 --amd64'
