--- a/homematic/azure-pipelines.yml
+++ b/homematic/azure-pipelines.yml
@@ -16,7 +16,7 @@ variables:
 
 
 jobs:
-- template: .azure/azp-template-addon.yml
+- template: /.azure/azp-template-addon.yml
   parameters:
     addon: 'homematic'
     arch: '--armv7 --i386'
