--- a/mosquitto/Dockerfile
+++ b/mosquitto/Dockerfile
@@ -10,22 +10,21 @@ ARG MOSQUITTO_AUTH_VERSION
 RUN apk add --no-cache \
         mosquitto curl openssl musl socat pwgen \
     && apk add --no-cache --virtual .build-dependencies \
-        build-base git mosquitto-dev curl-dev openssl-dev \
-    && git clone --depth 1 https://github.com/jpmens/mosquitto-auth-plug \
-    && cd mosquitto-auth-plug \
-    && cp config.mk.in config.mk \
-    && sed -i "s/?= yes/?= no/g" config.mk \
-    && sed -i "s/HTTP ?= no/HTTP ?= yes/g" config.mk \
+        build-base go git mosquitto-dev \
+    && git clone --depth 1 https://github.com/iegomez/mosquitto-go-auth \
+    && cd mosquitto-go-auth \
+    && CGO_CFLAGS="-I/usr/include -fPIC" \
+    && export CGO_LDFLAGS="-shared" \
     && make \
     && mkdir -p /usr/share/mosquitto \
-    && cp -f auth-plug.so /usr/share/mosquitto \
+    && cp -f go-auth.so /usr/share/mosquitto \
     && apk del .build-dependencies \
-    && rm -fr /usr/src/mosquitto-auth-plug
+    && rm -fr /usr/src/mosquitto-go-auth
 
 # Copy data
-COPY run.sh /
-COPY auth_srv.sh /bin/
-COPY mosquitto.conf /etc/
+COPY data/run.sh /
+COPY data/auth_srv.sh /bin/
+COPY data/mosquitto.conf /etc/
 
 WORKDIR /
 CMD [ "/run.sh" ]
