--- a/mosquitto/data/mosquitto.conf
+++ b/mosquitto/data/mosquitto.conf
@@ -14,14 +14,14 @@ persistence_location /data/
 
 ##
 # User settings
-auth_plugin /usr/share/mosquitto/auth-plug.so
+auth_plugin /usr/share/mosquitto/go-auth.so
 auth_opt_backends http
-auth_opt_http_ip 127.0.0.1
+auth_opt_http_host 127.0.0.1
 auth_opt_http_port 8080
 auth_opt_http_getuser_uri /login
 auth_opt_http_superuser_uri /superuser
 auth_opt_http_aclcheck_uri /acl
-auth_opt_log_quiet %%AUTH_QUIET_LOGS%%
+auth_opt_log_level %%LOG_LEVEL%%
 allow_anonymous %%ANONYMOUS%%
 
 #include_dir /share/mosquitto
