extract auth plugin builder

--- a/mosquitto/Dockerfile
+++ b/mosquitto/Dockerfile
@@ -1,27 +1,26 @@
 ARG BUILD_FROM
-FROM $BUILD_FROM
+FROM $BUILD_FROM as builder
 
-# Add env
-ENV LANG C.UTF-8
-
-# Install mosquitto + auth plugin
 WORKDIR /usr/src
 ARG MOSQUITTO_AUTH_VERSION
-RUN apk add --no-cache \
-        mosquitto curl openssl musl socat pwgen \
-    && apk add --no-cache --virtual .build-dependencies \
+RUN apk add --no-cache --virtual .build-dependencies \
         build-base go git mosquitto-dev \
     && git clone --depth 1 https://github.com/iegomez/mosquitto-go-auth \
     && cd mosquitto-go-auth \
     && CGO_CFLAGS="-I/usr/include -fPIC" \
     && export CGO_LDFLAGS="-shared" \
     && make \
-    && mkdir -p /usr/share/mosquitto \
-    && cp -f go-auth.so /usr/share/mosquitto \
-    && apk del .build-dependencies \
-    && rm -fr /usr/src/mosquitto-go-auth
+    && apk del .build-dependencies
+
+
+FROM $BUILD_FROM
+
+# Install mosquitto + auth plugin
+RUN apk add --no-cache \
+        mosquitto curl openssl musl socat pwgen
 
 # Copy data
+COPY --from=builder /usr/src/mosquitto-go-auth/go-auth.so /usr/share/mosquitto/
 COPY data/run.sh /
 COPY data/auth_srv.sh /bin/
 COPY data/mosquitto.conf /etc/
