--- a/mosquitto/Dockerfile
+++ b/mosquitto/Dockerfile
@@ -9,18 +9,18 @@ RUN apk add --no-cache --virtual .build-dependencies \
         build-base go git mosquitto-dev \
     && git clone --depth 1 -b ${MOSQUITTO_AUTH_VERSION} https://github.com/iegomez/mosquitto-go-auth \
     && cd mosquitto-go-auth \
-    && export CGO_CFLAGS="-I/usr/include -fPIC" CGO_LDFLAGS="-s -w" \
+    && export CGO_CFLAGS="-I/usr/include -fPIC" CGO_LDFLAGS="-shared" CGO_ENABLED=0 \
     && \
         if [ "${BUILD_ARCH}" = "armhf" ]; then \
-            export CGO_ENABLED=0 GOARM=6 GOARCH=arm; \
+            export GOARM=6 GOARCH=arm; \
         elif [ "${BUILD_ARCH}" = "armv7" ]; then \
-            export CGO_ENABLED=0 GOARM=7 GOARCH=arm; \
+            export GOARM=7 GOARCH=arm; \
         elif [ "${BUILD_ARCH}" = "aarch64" ]; then \
-            export CGO_ENABLED=0 GOARCH=arm64; \
+            export GOARCH=arm64; \
         elif [ "${BUILD_ARCH}" = "amd64" ]; then \
-            export CGO_ENABLED=0 GOARCH=amd64; \
+            export GOARCH=amd64; \
         elif [ "${BUILD_ARCH}" = "i386" ]; then \
-            export CGO_ENABLED=0 GOARCH=386; \
+            export GOARCH=386; \
         else \
             exit 1; \
         fi \
