--- a/mosquitto/data/mosquitto.conf
+++ b/mosquitto/data/mosquitto.conf
@@ -22,6 +22,8 @@ auth_opt_http_getuser_uri /login
 auth_opt_http_superuser_uri /superuser
 auth_opt_http_aclcheck_uri /acl
 auth_opt_log_quiet %%AUTH_QUIET_LOGS%%
+auth_opt_auth_cacheseconds 300
+
 allow_anonymous %%ANONYMOUS%%
 
 #include_dir /share/mosquitto
