--- a/mosquitto/Dockerfile
+++ b/mosquitto/Dockerfile
@@ -1,9 +1,6 @@
 ARG BUILD_FROM
 FROM $BUILD_FROM
 
-# Add env
-ENV LANG C.UTF-8
-
 # Install mosquitto + auth plugin
 WORKDIR /usr/src
 ARG MOSQUITTO_AUTH_VERSION
@@ -11,11 +8,9 @@ RUN apk add --no-cache \
         mosquitto curl openssl musl socat pwgen \
     && apk add --no-cache --virtual .build-dependencies \
         build-base git mosquitto-dev curl-dev openssl-dev \
-    && git clone --depth 1 https://github.com/jpmens/mosquitto-auth-plug \
+    && git clone --depth 1 -b ${MOSQUITTO_AUTH_VERSION} https://github.com/pvizeli/mosquitto-auth-plug \
     && cd mosquitto-auth-plug \
     && cp config.mk.in config.mk \
-    && sed -i "s/?= yes/?= no/g" config.mk \
-    && sed -i "s/HTTP ?= no/HTTP ?= yes/g" config.mk \
     && make \
     && mkdir -p /usr/share/mosquitto \
     && cp -f auth-plug.so /usr/share/mosquitto \
@@ -23,9 +18,9 @@ RUN apk add --no-cache \
     && rm -fr /usr/src/mosquitto-auth-plug
 
 # Copy data
-COPY run.sh /
-COPY auth_srv.sh /bin/
-COPY mosquitto.conf /etc/
+COPY data/run.sh /
+COPY data/auth_srv.sh /bin/
+COPY data/mosquitto.conf /etc/
 
 WORKDIR /
 CMD [ "/run.sh" ]
