--- a/check_config/Dockerfile
+++ b/check_config/Dockerfile
@@ -3,9 +3,9 @@ FROM $BUILD_FROM
 
 # Add Hass.io wheels repository
 ARG BUILD_ARCH
-ENV WHEELS_LINKS=https://wheels.home-assistant.io/alpine-3.9/${BUILD_ARCH}/
+ENV WHEELS_LINKS=https://wheels.home-assistant.io/alpine-3.10/${BUILD_ARCH}/
 
 # Copy data
-COPY run.sh /
+COPY data/run.sh /
 
 CMD [ "/run.sh" ]
