--- a/nginx_proxy/Dockerfile
+++ b/nginx_proxy/Dockerfile
@@ -1,14 +1,11 @@
 ARG BUILD_FROM
 FROM $BUILD_FROM
 
-# Add env
-ENV LANG C.UTF-8
-
 # Setup base
 RUN apk add --no-cache nginx openssl
 
 # Copy data
-COPY run.sh /
-COPY nginx.conf /etc/
+COPY data/run.sh /
+COPY data/nginx.conf /etc/
 
 CMD [ "/run.sh" ]
