--- a/nginx_proxy/config.json
+++ b/nginx_proxy/config.json
@@ -1,6 +1,6 @@
 {
   "name": "NGINX Home Assistant SSL proxy",
-  "version": "2.1",
+  "version": "2.2",
   "slug": "nginx_proxy",
   "description": "An SSL/TLS proxy",
   "url": "https://home-assistant.io/addons/nginx_proxy/",
@@ -8,7 +8,7 @@
   "startup": "application",
   "boot": "auto",
   "ports": {
-    "80/tcp": 80,
+    "80/tcp": null,
     "443/tcp": 443
    },
   "map": ["ssl", "share"],
