--- a/deconz/Dockerfile
+++ b/deconz/Dockerfile
@@ -31,6 +31,8 @@ RUN apt-get update \
         xfonts-base \
         xfonts-scalable \
     && rm -rf /var/lib/apt/lists/* \
+    && curl -L https://github.com/gentoo/eudev/archive/master.tar.gz | tar -xz \
+    && cp eudev-master/rules/* /etc/udev/rules.d/ \
     && if [ "${BUILD_ARCH}" = "armhf" ]; \
         then \
             curl -q -L -o /wiringpi.deb https://unicorn.drogon.net/wiringpi-2.46-1.deb \
