--- a/check_config/config.json
+++ b/check_config/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Check Home Assistant configuration",
-  "version": "2.2",
+  "version": "3.0",
   "slug": "check_config",
   "description": "Check current Home Assistant configuration against a new version",
   "url": "https://github.com/home-assistant/hassio-addons/tree/master/check_config",
@@ -11,6 +11,7 @@
     "amd64",
     "i386"
   ],
+  "udev": true,
   "startup": "once",
   "boot": "manual",
   "map": [
