--- a/nginx_proxy/data/nginx.conf
+++ b/nginx_proxy/data/nginx.conf
@@ -14,6 +14,8 @@ http {
     
     server_names_hash_bucket_size 64;
 
+	#include /share/nginx_proxy_cloudflare.conf;
+	
     server {
         server_name _;
         listen [::]:80 default_server ipv6only=off;
