--- a/nginx_proxy/data/nginx.conf
+++ b/nginx_proxy/data/nginx.conf
@@ -14,7 +14,7 @@ http {
     
     server_names_hash_bucket_size 64;
 	
-    #include /data/nginx_cloudflare.conf;
+    #include /data/cloudflare.conf;
 	
     server {
         server_name _;
