--- a/nginx_proxy/Dockerfile
+++ b/nginx_proxy/Dockerfile
@@ -2,7 +2,7 @@ ARG BUILD_FROM
 FROM $BUILD_FROM
 
 # Setup base
-RUN apk add --no-cache nginx openssl
+RUN apk add --no-cache nginx openssl curl
 
 # Copy data
 COPY data/run.sh /
