--- a/nginx_proxy/config.json
+++ b/nginx_proxy/config.json
@@ -18,8 +18,7 @@
     "keyfile": "privkey.pem",
     "hsts": "max-age=31536000; includeSubDomains",
     "cloudflare": {
-      "enable": false,
-      "real_ip_header": "CF-Connecting-IP"
+      "enable": false
     },
     "customize": {
       "active": false,
@@ -33,8 +32,7 @@
     "keyfile": "str",
     "hsts": "str",
     "cloudflare": {
-      "enable": "bool",
-      "real_ip_header": "str"
+      "enable": "bool"
     },
     "customize": {
       "active": "bool",
