--- a/letsencrypt/config.json
+++ b/letsencrypt/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Let's Encrypt",
-  "version": "3.0",
+  "version": "4.0",
   "slug": "letsencrypt",
   "description": "Manage certificate from Let's Encrypt",
   "url": "https://home-assistant.io/addons/lets_encrypt/",
@@ -9,19 +9,79 @@
   "boot": "manual",
   "ports": {
     "80/tcp": 80
-   },
+            },
   "map": ["ssl:rw"],
   "options": {
-    "email": null,
-    "domains": [null],
+    "email": "your@email.com",
+    "domains": ["your.domain"],
     "certfile": "fullchain.pem",
-    "keyfile": "privkey.pem"
+    "keyfile": "privkey.pem",
+    "challenge": "http",
+    "dnsprovider": "",
+    "dns_cloudflare_email": "your@email.com",
+    "dns_cloudflare_api_key": "",
+    "dns_cloudxns_api_key": "",
+    "dns_cloudxns_secret_key": "",
+    "dns_digitalocean_token": "",
+    "dns_dnsimple_token": "",
+    "dns_dnsmadeeasy_api_key": "",
+    "dns_dnsmadeeasy_secret_key": "",
+    "dns_gehirn_api_token": "",
+    "dns_gehirn_api_secret": "",
+    "dns_linode_key": "",
+    "dns_linode_version": "",
+    "dns_luadns_email": "your@email.com",
+    "dns_luadns_token": "",
+    "dns_nsone_api_key": "",
+    "dns_ovh_endpoint": "",
+    "dns_ovh_application_key": "",
+    "dns_ovh_application_secret": "",
+    "dns_ovh_consumer_key": "",
+    "dns_rfc2136_server": "",
+    "dns_rfc2136_port": "",
+    "dns_rfc2136_name": "",
+    "dns_rfc2136_secret": "",
+    "dns_rfc2136_algorithm": "",
+    "aws_access_key_id": "",
+    "aws_secret_access_key": "",
+    "dns_sakuracloud_api_token": "",
+    "dns_sakuracloud_api_secret": ""
   },
   "schema": {
     "email": "email",
     "domains": ["str"],
     "certfile": "str",
-    "keyfile": "str"
+    "keyfile": "str",
+    "challenge": "str",
+    "dnsprovider": "str",
+    "dns_cloudflare_email": "email",
+    "dns_cloudflare_api_key": "str",
+    "dns_cloudxns_api_key": "str",
+    "dns_cloudxns_secret_key": "str",
+    "dns_digitalocean_token": "str",
+    "dns_dnsimple_token": "str",
+    "dns_dnsmadeeasy_api_key": "str",
+    "dns_dnsmadeeasy_secret_key": "str",
+    "dns_gehirn_api_token": "str",
+    "dns_gehirn_api_secret": "str",
+    "dns_linode_key": "str",
+    "dns_linode_version": "str",
+    "dns_luadns_email": "email",
+    "dns_luadns_token": "str",
+    "dns_nsone_api_key": "str",
+    "dns_ovh_endpoint": "str",
+    "dns_ovh_application_key": "str",
+    "dns_ovh_application_secret": "str",
+    "dns_ovh_consumer_key": "str",
+    "dns_rfc2136_server": "str",
+    "dns_rfc2136_port": "str",
+    "dns_rfc2136_name": "str",
+    "dns_rfc2136_secret": "str",
+    "dns_rfc2136_algorithm": "str",
+    "aws_access_key_id": "str",
+    "aws_secret_access_key": "str",
+    "dns_sakuracloud_api_token": "str",
+    "dns_sakuracloud_api_secret": "str"
   },
   "image": "homeassistant/{arch}-addon-letsencrypt"
 }
